* Update react and react-dom to 15.3.2 * Add support for HTML content in info panel * Sort sidebar items by name (may be slow with large collections) * Add drag and drop support for folders in sidebar and the sidebar itself * Update styles

--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -10,7 +10,13 @@
     top: 0;
     right: 0;
     width: auto;
-    z-index: 1;
+    z-index: 2;
+    border-left: 0;
+
+    .navbar-button {
+      border-left: 1px solid $border-color;
+      border-right: 0;
+    }
   }
 
   > .navbar-tab {
@@ -58,10 +64,6 @@
 
   .navbar-button {
     width: $header-height - 2px;
-
-    &:last-child {
-      border-right: 0;
-    }
 
     &:before {
       @extend %font-awesome;
