--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -1,231 +1,129 @@
 @font-face {
-  font-family: 'codepicnic';
-  src:    url('fonts/codepicnic.eot?xilzpx');
-  src:    url('fonts/codepicnic.eot?xilzpx#iefix') format('embedded-opentype'),
-      url('fonts/codepicnic.ttf?xilzpx') format('truetype'),
-      url('fonts/codepicnic.woff?xilzpx') format('woff'),
-      url('fonts/codepicnic.svg?xilzpx#codepicnic') format('svg');
+  font-family: 'codebasket';
+  src: url('fonts/codebasket.eot');
+  src: url('fonts/codebasket.eot?#iefix') format('embedded-opentype'),
+      url('fonts/codebasket.ttf') format('truetype'),
+      url('fonts/codebasket.woff') format('woff'),
+      url('fonts/codebasket.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
+  font-size: 1em;
 }
 
 .icon {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'codepicnic' !important;
+  font-family: 'codebasket' !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 .icon:before {
-  font-family: 'codepicnic' !important;
+  font-family: 'codebasket' !important;
 }
 
 .icon-private:before {
-  content: "\e93f";
+  content: "P";
 }
 .icon-public:before {
-  content: "\e940";
+  content: "O";
 }
 .icon-sign-up:before {
-  content: "\e941";
+  content: "U";
 }
-.icon-streaming:before {
-  content: "\e942";
+.icon-more:before {
+  content: "N";
 }
 .icon-sign-in:before {
-  content: "\e93d";
+  content: "V";
 }
 .icon-sign-out:before {
-  content: "\e93e";
+  content: "W";
 }
 .icon-save:before {
-  content: "\e93c";
+  content: "S";
 }
 .icon-arrow-down:before {
-  content: "\e938";
+  content: "n";
 }
 .icon-arrow-up:before {
-  content: "\e939";
+  content: "o";
 }
 .icon-compress:before {
-  content: "\e93a";
+  content: "l";
 }
 .icon-expand:before {
-  content: "\e93b";
+  content: "m";
 }
 .icon-delete:before {
-  content: "\e935";
+  content: "G";
 }
 .icon-edit:before {
-  content: "\e936";
+  content: "E";
 }
 .icon-back:before {
-  content: "\e937";
-}
-.icon-wallet:before {
-  content: "\e934";
+  content: "p";
 }
 .icon-hide-sidebar:before {
-  content: "\e92b";
+  content: "M";
 }
 .icon-show-sidebar:before {
-  content: "\e930";
+  content: "L";
 }
 .icon-option-download:before {
-  content: "\e925";
+  content: "e";
 }
 .icon-option-fork:before {
-  content: "\e926";
+  content: "g";
 }
 .icon-option-github:before {
-  content: "\e927";
-}
-.icon-placeholder-download:before {
-  content: "\e928";
+  content: "h";
 }
 .icon-play:before {
-  content: "\e929";
+  content: "q";
 }
 .icon-refresh:before {
-  content: "\e92a";
+  content: "R";
 }
 .icon-info:before {
-  content: "\e92c";
+  content: "I";
 }
 .icon-new-file:before {
-  content: "\e92d";
+  content: "A";
 }
 .icon-new-folder:before {
-  content: "\e92e";
+  content: "F";
 }
 .icon-option-configure:before {
-  content: "\e92f";
+  content: "d";
 }
 .icon-cog:before {
-  content: "\e931";
-}
-.icon-close-2:before {
-  content: "\e932";
-}
-.icon-codepicnic-logo:before {
-  content: "\e933";
+  content: "C";
 }
 .icon-add:before {
-  content: "\e923";
+  content: "H";
 }
 .icon-browser:before {
-  content: "\e924";
-}
-.icon-codepicnic:before {
-  content: "\e921";
-}
-.icon-help:before {
-  content: "\e922";
-}
-.icon-placeholder-flavor:before {
-  content: "\e920";
-}
-.icon-placeholder-search:before {
-  content: "\e91f";
+  content: "B";
 }
 .icon-forks:before {
-  content: "\e91d";
-}
-.icon-stats:before {
-  content: "\e91e";
+  content: "g";
 }
 .icon-settings:before {
-  content: "\e91a";
-}
-.icon-card:before {
-  content: "\e918";
-}
-.icon-profile:before {
-  content: "\e919";
-}
-.icon-dashboard:before {
-  content: "\e917";
-}
-.icon-typewriter:before {
-  content: "\e916";
-}
-.icon-docs:before {
-  content: "\e915";
-}
-.icon-menu:before {
-  content: "\e914";
-}
-.icon-multidevice:before {
-  content: "\e913";
-}
-.icon-personalize:before {
-  content: "\e91b";
-}
-.icon-embed:before {
-  content: "\e91c";
-}
-.icon-coffee:before {
-  content: "\e911";
-}
-.icon-module:before {
-  content: "\e912";
-}
-.icon-placeholder-github:before {
-  content: "\e90d";
-}
-.icon-placeholder-paste:before {
-  content: "\e90e";
-}
-.icon-placeholder-settings:before {
-  content: "\e90f";
+  content: "d";
 }
 .icon-close:before {
-  content: "\e910";
-}
-.icon-placeholder-email:before {
-  content: "\e90b";
-}
-.icon-placeholder-password:before {
-  content: "\e90c";
-}
-.icon-circle-facebook:before {
-  content: "\e908";
-}
-.icon-circle-github:before {
-  content: "\e909";
-}
-.icon-circle-twitter:before {
-  content: "\e90a";
-}
-.icon-email:before {
-  content: "\e907";
-}
-.icon-console:before {
-  content: "\e900";
-}
-.icon-contact:before {
-  content: "\e901";
+  content: "x";
 }
 .icon-file:before {
-  content: "\e902";
-}
-.icon-github:before {
-  content: "\e903";
-}
-.icon-people:before {
-  content: "\e904";
+  content: "f";
 }
 .icon-share:before {
-  content: "\e905";
-}
-.icon-time:before {
-  content: "\e906";
+  content: "X";
 }
