Internal methods to set active path after selecting files on sidebar

--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -127,7 +127,7 @@
 }
 
 .codebasket-options-list {
-  right: $header-height;
+  right: $header-height - 2;
   top: calc(#{$header-height} - 1px);
   padding: 1px;
   width: calc(#{$sidebar-width} / 2);
