--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -10,120 +10,122 @@
   font-size: 1em;
 }
 
-.icon {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'codebasket' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+.codebasket-main {
+  .icon {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'codebasket' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
 
-.icon:before {
-  font-family: 'codebasket' !important;
-}
+  .icon:before {
+    font-family: 'codebasket' !important;
+  }
 
-.icon-private:before {
-  content: "P";
-}
-.icon-public:before {
-  content: "O";
-}
-.icon-sign-up:before {
-  content: "U";
-}
-.icon-more:before {
-  content: "N";
-}
-.icon-sign-in:before {
-  content: "V";
-}
-.icon-sign-out:before {
-  content: "W";
-}
-.icon-save:before {
-  content: "S";
-}
-.icon-arrow-down:before {
-  content: "n";
-}
-.icon-arrow-up:before {
-  content: "o";
-}
-.icon-compress:before {
-  content: "l";
-}
-.icon-expand:before {
-  content: "m";
-}
-.icon-delete:before {
-  content: "G";
-}
-.icon-edit:before {
-  content: "E";
-}
-.icon-back:before {
-  content: "p";
-}
-.icon-hide-sidebar:before {
-  content: "M";
-}
-.icon-show-sidebar:before {
-  content: "L";
-}
-.icon-option-download:before {
-  content: "e";
-}
-.icon-option-fork:before {
-  content: "g";
-}
-.icon-option-github:before {
-  content: "h";
-}
-.icon-play:before {
-  content: "q";
-}
-.icon-refresh:before {
-  content: "R";
-}
-.icon-info:before {
-  content: "I";
-}
-.icon-new-file:before {
-  content: "A";
-}
-.icon-new-folder:before {
-  content: "F";
-}
-.icon-option-configure:before {
-  content: "d";
-}
-.icon-cog:before {
-  content: "C";
-}
-.icon-add:before {
-  content: "H";
-}
-.icon-browser:before {
-  content: "B";
-}
-.icon-forks:before {
-  content: "g";
-}
-.icon-settings:before {
-  content: "d";
-}
-.icon-close:before {
-  content: "x";
-}
-.icon-file:before {
-  content: "f";
-}
-.icon-share:before {
-  content: "X";
+  .icon-private:before {
+    content: "P";
+  }
+  .icon-public:before {
+    content: "O";
+  }
+  .icon-sign-up:before {
+    content: "U";
+  }
+  .icon-more:before {
+    content: "N";
+  }
+  .icon-sign-in:before {
+    content: "V";
+  }
+  .icon-sign-out:before {
+    content: "W";
+  }
+  .icon-save:before {
+    content: "S";
+  }
+  .icon-arrow-down:before {
+    content: "n";
+  }
+  .icon-arrow-up:before {
+    content: "o";
+  }
+  .icon-compress:before {
+    content: "l";
+  }
+  .icon-expand:before {
+    content: "m";
+  }
+  .icon-delete:before {
+    content: "G";
+  }
+  .icon-edit:before {
+    content: "E";
+  }
+  .icon-back:before {
+    content: "p";
+  }
+  .icon-hide-sidebar:before {
+    content: "M";
+  }
+  .icon-show-sidebar:before {
+    content: "L";
+  }
+  .icon-option-download:before {
+    content: "e";
+  }
+  .icon-option-fork:before {
+    content: "g";
+  }
+  .icon-option-github:before {
+    content: "h";
+  }
+  .icon-play:before {
+    content: "q";
+  }
+  .icon-refresh:before {
+    content: "R";
+  }
+  .icon-info:before {
+    content: "I";
+  }
+  .icon-new-file:before {
+    content: "A";
+  }
+  .icon-new-folder:before {
+    content: "F";
+  }
+  .icon-option-configure:before {
+    content: "d";
+  }
+  .icon-cog:before {
+    content: "C";
+  }
+  .icon-add:before {
+    content: "H";
+  }
+  .icon-browser:before {
+    content: "B";
+  }
+  .icon-forks:before {
+    content: "g";
+  }
+  .icon-settings:before {
+    content: "d";
+  }
+  .icon-close:before {
+    content: "x";
+  }
+  .icon-file:before {
+    content: "f";
+  }
+  .icon-share:before {
+    content: "X";
+  }
 }
