Added Pulse to "toggle sidebar" icon

--- a/sass/components/mobile.scss
+++ b/sass/components/mobile.scss
@@ -1,4 +1,8 @@
 @media screen and (max-width: 768px) {
+  @keyframes pulse {
+    0%   { color: #ccc;}
+    100% { color: #666;}
+  }
   .codebasket-content {
     left: 0px;
     width: 100%;
@@ -13,6 +17,9 @@
   .icon-show-sidebar {
     position: absolute;
     left: 0px;
+    &:before {
+      animation: pulse 1s ease-in-out infinite alternate;
+    }
   }
   .icon-hide-sidebar{
     position: absolute;
