--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -172,6 +172,11 @@
       }
     }
 
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
     .navbar-tab-title {
       display: inline-block;
       width: 90%;
