--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -19,37 +19,33 @@
     }
   }
 
+  .navbar-tab-title {
+    padding: 10px;
+    font-size: 12px;
+    font-weight: 100;
+    color: #999999;
+    max-width: 115px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .navbar-tab-close {
+    margin-right: 10px;
+    transform: translateY(-2px);
+  }
+
   .navbar-tab {
     white-space: nowrap;
-
     &:hover {
       background: #eee;
     }
-
     > * {
       display: inline-block;
       vertical-align: middle;
     }
-
-    .navbar-tab-title {
-      padding: 10px;
-      font-size: 12px;
-      font-weight: 100;
-      color: #999999;
-      max-width: 115px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    .navbar-tab-close {
-      margin-right: 10px;
-      transform: translateY(-2px);
-    }
-
     &.active {
       box-shadow: 0 0 2px white;
       border-bottom: 3px solid $blue-light;
-
       .navbar-tab-title {
         color: #666;
         font-weight: 400;
@@ -61,22 +57,72 @@
     font-size: 14px;
   }
 
-  &.touch .navbar-touch {
-    margin: 0;
-    padding: 0;
-    display: block;
-    position: absolute;
-    z-index: 100;
-    width: 100%;
-    list-style: none;
-    background: #f5f5f5;
-    border-right: 1px solid #ccc;
-    border-left: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    height: 47px;
-    overflow: hidden;
-    transition: height .3s ease-in-out;
-
+  &.touch {
+    .nabvar-placeholder {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 11;
+      width: 100%;
+      background: #f5f5f5;
+      height: 48px;
+      border-bottom: 1px solid #ccc;
+      overflow: hidden;
+      font-size: auto;
+    }
+    .navbar-touch {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      display: block;
+      position: absolute;
+      top: 0;
+      left: -1px;
+      right: -1px;
+      z-index: 10;
+      width: calc(100% + 2px);
+      list-style: none;
+      background: #f5f5f5;
+      border-right: 1px solid #ccc;
+      border-left: 1px solid #ccc;
+      border-bottom: 1px solid #ccc;
+      height: 0;
+      overflow: hidden;
+      transition: height .3s ease-in-out;
+      border-radius: 0 0 5px 5px;
+      &.opened{
+        top: 48px;
+        height: 260px;
+        overflow-y: scroll;
+      }
+      .navbar-tab{
+        width: 100%;
+        border-right: 0;
+        border-top: 1px solid white;
+      }
+    }
+    .nabvar-placeholder, 
+    .navbar-touch {
+      .navbar-tab-title {
+        display: block;
+        padding: 19px 10px;
+        max-width: inherit;
+        text-overflow: ellipsis;
+      }
+      .navbar-tab-close {
+        display: inline-block;
+        margin-right: 0;
+        margin-top: 4px;
+        transform: none;
+        padding: 15px;
+        float: left;
+      }
+    }
     .navbar-tab-toggler {
       position: absolute;
       z-index: 10;
@@ -86,46 +132,27 @@
       font-size: 15px;
       color: black;
       cursor: pointer;
-    }
-    .navbar-tab-toggler:before {
-      content: 'n';
-      font-family: 'codebasket';
-    }
-    &.opened{
-      height: 260px;
-      overflow-y: scroll;
       &:before {
-        content: 'o';
+        font-family: 'codebasket';
+        content: 'n';
       }
     }
-    .navbar-tab{
-      width: calc( 100% - 48px );
-      border-right: 0;
-      border-bottom: 1px solid white;
-    }
-    .navbar-tab-title {
-      display: inline-block;
-      padding: 19px 10px;
-      width: 100%;
-    }
-    .navbar-tab-close {
-      display: inline-block;
-      margin: 0;
-      padding: 15px;
+    .navbar-tab-toggler.opened:before {
+      content: 'o';
     }
   }
-
 }
 
 .codebasket-main {
-  .navbar-button, .navbar-tab {
-    @extend %menu-item;
 
+  .navbar-button, 
+  .navbar-tab,
+  .nabvar-placeholder{
+    @extend %menu-item;
     .icon-close,
     &.icon-arrow-down:before {
       font-size: 10px;
     }
-
     .icon-close {
       color: #ccc;
       &:hover {
