--- a/sass/components/sidebar.scss
+++ b/sass/components/sidebar.scss
@@ -66,6 +66,9 @@
 
     > .codebasket-items-list {
       margin-bottom: 20px;
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
