--- a/sass/components/mobile.scss
+++ b/sass/components/mobile.scss
@@ -46,8 +46,6 @@
     .codebasket-item-folder .codebasket-item-actions, 
     .codebasket-item-file .codebasket-item-actions {
       padding: 5px 0;
-      background: rgba(255,255,255,0.8);
-      border-radius: 3px 0 0 3px;
       right: 0px;
       opacity: 0.1;
       .icon {
@@ -89,6 +87,9 @@
   }
   .codebasket-footer .codebasket-brand {
     width: 200px;
+  }
+  .codebasket-items-list li .codebasket-item-name{
+    max-width: 120px;
   }
 }
 
