--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -27,6 +27,7 @@
     max-width: 115px;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: pre;
   }
 
   .navbar-tab-close {
@@ -114,6 +115,7 @@
         padding: 19px 10px;
         max-width: calc( 100% - 70px);
         text-overflow: ellipsis;
+        white-space: pre;
       }
       .navbar-tab-close {
         display: inline-block;
