--- a/sass/components/sidebar.scss
+++ b/sass/components/sidebar.scss
@@ -122,6 +122,7 @@
       text-overflow: ellipsis;
       overflow: hidden;
       max-width: 200px;
+      white-space: pre;
     }
 
     &.codebasket-search {
