Changed the location for "empty sidebar" message to improve "dragger" interaction

--- a/sass/components/mobile.scss
+++ b/sass/components/mobile.scss
@@ -78,6 +78,9 @@
       height: 36px;
     }
   }
+  .codebasket-sidebar.empty .codebasket-items-list.files {
+    min-height: 30vh;
+  }
 }
 
 @media screen and (max-width: 768px) {
