A better loading style for the sidebar
Because we worth it

--- a/sass/components/mobile.scss
+++ b/sass/components/mobile.scss
@@ -81,6 +81,9 @@
   .codebasket-sidebar.empty .codebasket-items-list.files {
     min-height: 30vh;
   }
+  .codebasket-sidebar.loading::before {
+    top: $touchSize;
+  }
 }
 
 @media screen and (max-width: 768px) {
