--- a/sass/components/sidebar.scss
+++ b/sass/components/sidebar.scss
@@ -12,6 +12,17 @@
   }
 
   &.loading:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 34px;
+    left: 0;
+    right: 1px;
+    bottom: 0;
+    background: rgba(255,255,255,0.9);
+    z-index: 10;
+  }
+  &.loading:after {
     display: block;
     font-family: "codebasket";
     font-size: 40px;
@@ -24,6 +35,7 @@
     color: #e6e6e6;
     width: auto;
     animation: codebasket-spin 1s linear infinite;
+    z-index: 11;
   }
 
   .codebasket-navbar {
