Changes for: https://github.com/CodePicnic/CodePicnic/issues/483

--- a/sass/components/mobile.scss
+++ b/sass/components/mobile.scss
@@ -25,7 +25,7 @@
   // MODAL CONTENT
   .codebasket-aside-content, 
   .codebasket-options-list{
-    top: $touchSize - 1;
+    top: $touchSize;
   }
   // TABS
   .codebasket-viewport.full .codebasket-navbar {
