--- a/sass/components/sidebar.scss
+++ b/sass/components/sidebar.scss
@@ -82,7 +82,13 @@
     padding: 15px 2px;
 
     > .codebasket-items-list {
-      margin-bottom: 20px;
+      margin-bottom: 15px;
+      padding-top: 15px;
+      border-top: 1px solid #f5f5f5;
+      &:first-child {
+        padding-top: 0;
+        border-top: 0;
+      }
       &:last-child {
         margin-bottom: 0;
       }
