--- a/sass/components/sidebar.scss
+++ b/sass/components/sidebar.scss
@@ -69,6 +69,15 @@
       padding: 20px;
       color: #ccc;
     }
+    .files.dragover {
+      cursor: copy;
+      z-index: 10;
+      background: $blue-light-hover;
+    }
+    .files.dragover:after,
+    .files.dragover:before {
+      color: white;
+    }
   }
 
   .codebasket-sidebar-content {
@@ -101,19 +110,6 @@
   width: 100%;
   line-height: 1.8em;
   transition: background-color .3s ease-in-out;
-
-  &.dragover,
-  &.dragover.empty {
-    cursor: copy;
-    z-index: 10;
-    background: $blue-light-hover;
-    &:before {
-      color: white;
-    }
-    &:after {
-      color: white;
-    }
-  }
 
   .codebasket-list-title {
     font-weight: 900;
